[package]
name = "autorocks"
version = "0.1.0"
edition = "2021"
description = "RocksDB binding"
authors = ["Godwoken"]
license = "MIT"

[features]
io-uring = ["autorocks-sys/io-uring"]

[dependencies]
autorocks-sys = { path = "autorocks-sys", version = "0.1.0" }

[workspace]
members = ["autorocks-sys"]
