[package]
name = "autorocks"
version = "0.1.0"
edition = "2021"
description = "RocksDB binding"
authors = ["Godwoken"]
license = "MIT"

[features]
io-uring = ["autorocks-sys/io-uring"]

[dependencies]
autocxx = "0.23.1"
autorocks-sys = { path = "autorocks-sys", version = "0.1.0" }
moveit = "0.5.1"

[workspace]
members = ["autorocks-sys", "bench"]

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
lto = true
